// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteAdminProductLicenseNode active 1`] = `
<DocumentFragment>
  <li
    class="list-group-item py-2"
  >
    <div
      class="d-flex align-items-center justify-content-between"
    >
      <div
        class="mr-3 text-truncate"
      >
        <strong>
          License in 
          <a
            class="anchorLink mr-3"
            href="/s"
          >
            s
          </a>
        </strong>
        <span
          class="mr-3"
        >
          <accountname />
        </span>
      </div>
      <div>
        <span
          class="mr-3"
          title="Tags: a"
        >
          NB (123 users)
        </span>
        <div
          class="d-inline-block mr-3"
          data-tooltip="Jan 1, 2021, 12:00:00 AM"
        >
          <strong
            class="text-success"
          >
            Valid
          </strong>
           (15 years remaining)
        </div>
        <span
          class="text-muted"
        >
          Created 
          <span
            class="timestamp"
            data-tooltip="2020-01-01"
          >
            in almost 14 years
          </span>
        </span>
      </div>
    </div>
    <div>
      Tags: 
      <div
        class="badge secondary mr-1"
      >
        a
      </div>
    </div>
    <div
      class="form-inline mt-2 d-block"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control input"
          readonly=""
          type="text"
          value="lk1"
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btnSecondary"
            type="button"
          >
            <svg
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
             Copy
          </button>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;

exports[`SiteAdminProductLicenseNode inactive 1`] = `
<DocumentFragment>
  <li
    class="list-group-item py-2"
  >
    <div
      class="d-flex align-items-center justify-content-between"
    >
      <div
        class="mr-3 text-truncate"
      >
        <strong>
          License in 
          <a
            class="anchorLink mr-3"
            href="/s"
          >
            s
          </a>
        </strong>
        <span
          class="mr-3"
        >
          <accountname />
        </span>
      </div>
      <div>
        <span
          class="mr-3"
          title="Tags: a"
        >
          NB (123 users)
        </span>
        <span
          class="text-warning font-weight-bold mr-3"
          data-tooltip="A newer license was generated for this subscription. This license should no longer be used."
        >
          Inactive
        </span>
        <span
          class="text-muted"
        >
          Created 
          <span
            class="timestamp"
            data-tooltip="2020-01-01"
          >
            in almost 14 years
          </span>
        </span>
      </div>
    </div>
    <div>
      Tags: 
      <div
        class="badge secondary mr-1"
      >
        a
      </div>
    </div>
    <div
      class="form-inline mt-2 d-block"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control input"
          readonly=""
          type="text"
          value="lk1"
        />
        <div
          class="input-group-append"
        >
          <button
            class="btn btnSecondary"
            type="button"
          >
            <svg
              class="mdi-icon iconInline"
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
              />
            </svg>
             Copy
          </button>
        </div>
      </div>
    </div>
  </li>
</DocumentFragment>
`;
